# game

./: .gitignore  .gitmodules  CMakeLists.txt  Disciples_4.pro  ESC.qml  Makefile  Property_otrad.qml  Style_files.qml  Table_property.qml  base_player.cpp  base_player.h  battle.cpp  battle.h  battle.qml  building_boez.qml  effect.cpp  effect.h  global_settings.cpp  global_settings.h  history.qml  image_files.qrc  load_taktic.qml  main.cpp  main.qml  qml.qrc  result.qml  taktic_game.qml  up_level.qml
Git_Disciples_4_TEST/: CMakeLists.txt  main.cpp
XML/: xml_angel.xml  xml_arbaletshik.xml  xml_cold.xml  xml_dark_mag.xml  xml_elemental_cold.xml  xml_elemental_elektrisiti.xml  xml_fier.xml  xml_fire_mag.xml  xml_golem.xml  xml_lekar.xml  xml_luchnik.xml  xml_molniy_mag.xml  xml_ogr.xml  xml_paralish.xml  xml_proklynaet.xml  xml_shelitel.xml  xml_simbiot.xml  xml_skelet.xml  xml_vampir.xml  xml_vsadnik.xml
XML/heroes/: xml_heroes_luchnik.xml  xml_heroes_mag.xml  xml_heroes_voin.xml
XML/other/: xml_goblin_lushnik.xml  xml_goblin_voin.xml  xml_krestyanin.xml  xml_lushnik.xml  xml_main.xml  xml_main_strash.xml  xml_meshnik.xml  xml_zashitnik.xml
src/cpp/: base_player.cpp  battle.cpp  effect.cpp  global_settings.cpp  main.cpp
src/include/: base_player.h  battle.h  effect.h  global_settings.h
src/qml/: Bar.qml  Delegate_building.qml  Select_window.qml  Table_property.qml  army.qml  battle.qml  building_gold.qml  geroi.qml  history.qml  home.qml  load_army.qml  result.qml  up_level.qml
